# backend/internal/entity/payment.go
@@ -15,10 +15,23 @@ type PaymentSummary struct {
 	Processing int `json:"processing"`
 }
 
+type PaymentReviewResponse struct {
+	Status  string `json:"status"`
+	Message string `json:"message"`
+}
+
 type PaymentStatus string
 
 const (
 	PaymentStatusCompleted  PaymentStatus = "completed"
 	PaymentStatusProcessing PaymentStatus = "processing"
 	PaymentStatusFailed     PaymentStatus = "failed"
+)
+
+type PaymentReviewStatus string
+
+const (
+	PaymentReviewStatusUnderReview PaymentReviewStatus = "under review"
+	PaymentReviewStatusApproved    PaymentReviewStatus = "approved"
+	PaymentReviewStatusRejected    PaymentReviewStatus = "rejected"
 )
